dbus-daemon drops messages if sender exits during service activation
Submitted by Kerrick Staley
Assigned to D-Bus Maintainers
Description
If you pass the --print-reply flag to dbus-send, it results in a "method call". Without the flag, it sends a "signal". The dbus-send manpage says
--print-reply Block for a reply to the message sent, and print any reply received in a human-readable form.
so it seems that --print-reply should only change the output of dbus-send (similar to a --verbose flag).
I encountered this bug because the command
dbus-send --dest=org.gnome.Shell /org/gnome/Shell org.freedesktop.DBus.Properties.Set string:org.gnome.Shell string:OverviewActive variant:boolean:true
has no effect unless you pass the --print-reply flag.
This bug is in dbus 1.6.4, but the "Version" field of the bug report doesn't contain that option (it only goes up to 1.5).
Version: 1.5